# ChangeLog for media-libs/libvisio
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libvisio/ChangeLog,v 1.60 2015/02/04 09:15:48 mgorny Exp $

*libvisio-0.1.1 (04 Feb 2015)

  04 Feb 2015; Michał Górny <mgorny@gentoo.org> +libvisio-0.1.1.ebuild:
  Version bump. Bug #538298.

  02 Feb 2015; Jeroen Roovers <jer@gentoo.org> libvisio-0.1.0.ebuild:
  Marked ~hppa (bug #538520).

  10 Oct 2014; Markus Meier <maekke@gentoo.org> libvisio-0.1.0.ebuild:
  add ~arm, bug #520692

*libvisio-0.1.0 (14 Sep 2014)

  14 Sep 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +libvisio-0.1.0.ebuild, libvisio-9999.ebuild:
  Version bump. Thanks to Andreas Sturmlechner.

  01 Nov 2013; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.28.ebuild,
  libvisio-0.0.30.ebuild:
  Stabilise on amd64 x86 and ppc, drop older.

*libvisio-0.0.30 (10 Jul 2013)

  10 Jul 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libvisio-0.0.30.ebuild,
  -libvisio-0.0.29.ebuild:
  Bump to latest libvisio fixing backcompat with older boost. Remove the broken
  one. Fixes bug#475998

*libvisio-0.0.29 (02 Jul 2013)

  02 Jul 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libvisio-0.0.29.ebuild:
  Version bump to latest.

  21 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.26.ebuild:
  Remove older.

*libvisio-0.0.28 (05 Jun 2013)

  05 Jun 2013; Agostino Sarubbo <ago@gentoo.org> +libvisio-0.0.28.ebuild:
  Version bump to 0.0.28, committed intentionally as stable. Both requests from
  scarabeus

  27 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> libvisio-0.0.26.ebuild,
  libvisio-9999.ebuild:
  Track subslot changes on icu.

  27 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> -libvisio-0.0.25.ebuild,
  libvisio-0.0.26.ebuild:
  Stabilise 0.0.26 on amd64 x86 and ppc. Remove older.

  22 Apr 2013; Tomáš Chvátal <scarabeus@gentoo.org> libvisio-0.0.26.ebuild,
  libvisio-9999.ebuild:
  Fix license.

*libvisio-0.0.26 (22 Apr 2013)
