@@ -7,25 +7,25 @@ DIST libvisio-0.1.1.tar.xz 412752 SHA256 4b510168d1465516fdf6e57c01e2f9eae1fc0ae
 EBUILD libvisio-0.0.30.ebuild 1244 SHA256 dcecce0787d8a6d5a61f5e3d48a8042e4a4b43c6e1be7fda2ed26a05e018c3dc SHA512 1a7896ef6aedfc054bc2f182a5305fdc3b1d422c2fb4acd5fcf40871fb9c141577a090985d36198b27ad7e0c8c637360a4d991f4e91234dd6e9f5d38c14136c1 WHIRLPOOL 941f2f73e786711005015c82e630188958fa036f6df9d56a7c1d5860c54e473fda12ce4a2b993e53568eac98c6bd429828ddcfc58724f5cc644b0beabad87fed
 EBUILD libvisio-0.1.0.ebuild 1227 SHA256 c1c10fda2b56b1cf153d735af19159fb443ca430120ec71d6efea24bcafe416b SHA512 f70924ae917de4f48672a5376f49621b0c67e5df74e6e441d2ce7aaa9c0c9a4023fbbb7f89b7443ba63f6e26514e0cc3e8f94d07d0231bdaeacf87585c0a7be5 WHIRLPOOL 364e87256acb42901600c494df16430cebd3ba5c5dc4f5f181369cabded85ded7054c66f6eed735fb02cf5bdb33b0eeaec79dbbdaae6b7fb9e5b7012b7b2fd82
 EBUILD libvisio-0.1.1.ebuild 1292 SHA256 d233b73ed38357f48ec92301737e8050792c56e8a5bce40c3be1d7492b125c3c SHA512 a82717ed528639d7b009cb70f37f76546825cf054e1b07486bdb20c6504a85f80d5dafee8dcfe8dd7fb83ac31358c905736b733e199e34df9468323f68d792fb WHIRLPOOL 50c03a1abc95fecffd63095cf23a7e1f6a4cb7de2bdc16610f8513885ff92e030e2628d38da5110c68744c98489d0cec7ce887f3a834faefa89f3740a73f1697
-EBUILD libvisio-9999.ebuild 1232 SHA256 99e5e14e08e7b8e50c45af8ffff6533e55717d324c17a2336b2404096ae23f4c SHA512 e71800f9583ec46a8ee55a74cd85248e53d1dd238abff4e074031e7dcf1080b9b6f5ae32a938fc596f28cb373d022a96ea7a6835b67eeea713e391bfee126166 WHIRLPOOL 31e938f152187a25006917042fe37fd3a27c3d9321eb3648a204d03d4b5d1d8aa78c5ca7a182624cca8ddb4b661e6949073519d12875eef9a52d4e5cb999df72
-MISC ChangeLog 9767 SHA256 1dc3fa648f8a615373e2cb1f56cd4c135f89202e182ab522699cb66f02620e13 SHA512 d1b1be536c1ea7557d6ddb5a0a023d837f4d0481cef29e291c6171dfce5a161bfca9f5942a1570e7ffb6b19a06982eb02920b1594d7a495ccf1d70ab94ff1690 WHIRLPOOL 89d334090d420bfebab6746cb503edcb418b990a0d38ba3e1d507a2b97be103628bebe8a59f63f3ed90394caac4a57b46cb457f2809210c79461e174fde16eae
+EBUILD libvisio-9999.ebuild 1297 SHA256 aeade0db8861eb92caef78d4b2b657b339e8c2ccaad136764545c55227c060cd SHA512 7e8bb1759d4d76195780cedd5693df1775fe5ebd1fdf5b567aad1e086bcaa3573913c6c9b07515254f09cedc3228165edeb2c48f19ac3aecc88a5c6d6ccec6a6 WHIRLPOOL 55476f03d01f69aa3b05c66d0260c9cf51d92b58339a1be9dd4c8c57a4247cb09b88af0364315e0e20a8fd340cba15d1e6a935291e9b9be601d071a718b91727
+MISC ChangeLog 9873 SHA256 14fa76a678cb4417fb2669f2bd6944f0eb5d0a2b576413e399eb3d76417c729c SHA512 70b3840adf22d286f2cbad6a6950db7f642fe3f5914fe44ef07916a2d9f2d2e81871d732781714100dff0d6a4cd5aeef6c6058f13572896f6c1fd4bcf2712c07 WHIRLPOOL 08dcd29fa8a2ef335fbf1fa0bc44a43369250047b6e775462e9c255054fb40f3d3e380253b8b6d17cc3b37a8e3fc3cf1121d9473c0c4b83f4f0eaa4dd164defb
 MISC metadata.xml 164 SHA256 6dd077e0a4bddf8cac0a6d7fb01d5f992a81c85d77d55787d19c6d4ae4c5aeeb SHA512 acd8ec5158c34fd738af175dda4c270a884c80e76dd10d9252e2513846ae1cb69ed8b1afe328a69ced10974ca3c60366394990b98a0d9b9815527f262afd9937 WHIRLPOOL 43b43d99d3c96c6da7006df219d57a4ff853353940dbd597bbbd2be00af7b38f0e6c3e33024b1e964ef1fedb12f788ea78693b7e3527011d8bbb9757ec0b88a2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU0eNFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU0i6VXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOq4IP/2LM/Czv3Z+gESQ9TISPB6tc
-PuxzxNYGxYXDJq+1mgXLXWcn9l7fAqAmahEwI+R2t+QZSe1uerSEw/axD1kdJ9Ny
-z7xnm07Vm023J9EC3nMgI+/MXhLYnQJwT/o/knHbxUNYyHOaQTKStM+27ClcXRmR
-6DVM4xd9t3foOLV8EN/bJRgJRbZu/b1cj8Ojt9P/DF7mvW2HeehJ3ZN7X+vbu0AH
-gVn2oG0JcB998nSvXsR/JNFIJJ0Q439BzroyLmDQxKrK91S60z7iIdzlKfUJOSu9
-1AFmKfVM/BYWJuh9X3c0Ns5+instTcwX0nTNZYz1KxgbbXkDEzLzKuHtkIDNF5OX
-NateUeRe6AwrUJTP0h2cVhlHwLmwxxBHsmrCiYICGcSwFA8lnungK+g38uZqogfq
-IInLQKMqziqkmow5/zRRHTPJJpKpnsNQmmWphw7m8bL2PtAI6dIKzsyAGR4hLVdp
-LRTmVh4ZgHWba+fXED4X/BruQ8eMH4qLolL0A32NoOsLHPQW9Ap6vSARtM4LIGLy
-DrtZcgGuJDsQ0+x7/72C7D2R+DssJ6VPhUnD1wsgsF6Tu7iWDupuwIT506Yx1s9o
-5VVsslNzfxDR1agz9ubylfCaX4oWA727E+lMwjGgXwcQlvEJH+tnUCLZmbENBKQL
-R6zkM9TmDqt88xMahq9B
-=6Pfd
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOs3AQAKlgyze0lUIv1GmIrfiyYCvQ
+9oQabM0otvr356r7IUZiCvZGw2iRfXT0KB2hWKx3WJxz7QgJx+AaIRjTG6D7rJaA
+XuCKDNiwca7MeveGjy28YncVZPxkU0If6vUy8DRGy4jU4AnQkXjtKkRd8auDm99H
+UDPYWkrymdpRpMehXGK0drK4gQuFAfhNMGbNLxBquNNV/J/SgoyiFKx7zmoG80Dp
+kfhEWzTXLDvJn1b7wJNMBTKqPGBcnyz7TlemVJSV6cR8TpCTGkRk0fA6+D3wlc2m
+UNEChvU5QE+kTC3TpI4C0e8FfuNgydPdV4k4cLZR49eMnP/Yr4wvsrBgHcOSW+jJ
+7Hw5l46d3Y7X2xhfh5ijC1J+85fCpez/r4nGUstQAzC3MpqDwLhkc8E3/hGwkXG5
+n5vs+Hq0cqxF+/qhls8JgRHIR2STqkgZ/VX5KzuXy6TC+wHpvG1mH4rP1pxUjrXb
+o0CBr16Uvz2WhQZCNRksVBaYwJMxn+iIgaUQeol+sMi/3oCmhHutVzX2BI1zqm0x
+Yh/ZeNAQBhQrGYzgrftYRuEPgO7paLWpG9HkPYKaXD9dnqOjwuDQXuEv/a7ClbgE
+QCcQmwDTzmRKL3lCYCWQvisQMiNTlHzhjn/fOgnhzC8UCG7FCKJpNlQTTZzNskxb
+oHvopqGh3q5HTrrl1QG5
+=59E5
 -----END PGP SIGNATURE-----
